--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
 </head>
 <!-- HTML NÃO TEM PESCOÇO --> 
 <body>
-    <h1>sobre mim1</h1>
+    <h1>sobre mim</h1>
     <!--code injected by live server-->
-    <h2>sobre mim2</h2>
-    <h3>sobre mim3</h3>
 
     <p>gosto de jogar cs2</p>
 
@@ -42,18 +40,18 @@
 
     <header>
         <ul>
-            <li><a href="#">Sobre mim</a></li>
-            <li><a href="#">Formação academica</a></li>
-            <li><a href="#">hard skills</a></li>
-            <li><a href="#">soft skills</a></li>
-            <li><a href="#">meus projetos</a></li>
-            <li><a href="#">meus artigos</a></li>
-            <li><a href="#">ultima seção</a></li>
+            <li><a href="#sobreMim">Sobre mim</a></li>
+            <li><a href="#formacaoAcademica">Formação academica</a></li>
+            <li><a href="#hardSkills">hard skills</a></li>
+            <li><a href="#softSkills">soft skills</a></li>
+            <li><a href="#meusProjetos">meus projetos</a></li>
+            <li><a href="#meusArtigos">meus artigos</a></li>
+            <li><a href="#contato">contato</a></li>
         </ul>
 
     </header>
 
-<section>
+<section id="formacaoAcademica">
     <h2>formação academica</h2>
     <li>ensino fundamental completo pelo SESI</li>
     <li>se formando no ensino medio do SESI</li>
@@ -61,7 +59,7 @@
     <li>cursnado desenvolvimento de sistemas no senai</li>
 </section>
 
-<section>
+<section id="hardSkills">
     <h2>hard skills</h2>
     <li>inglês nivel medio</li>
     <li>design nivel básico</li>
@@ -74,7 +72,7 @@
     <li>conhecimento nivel basico em lógica de programação</li>
 </section>
 
-<section>
+<section id="softSkills">
     <h2>soft skills</h2>
     <li>boa autoconfiança</li>
     <li>tabalho em grupo</li>
@@ -90,24 +88,30 @@
     <li>comunicação</li>
 </section>
 
-<section>
+<section id="meusProjetos">
     <h2>Meus projetos</h2>
     <li><a href="https://github.com/joaomarcos33">jogo de alunissagem</a> </li>
 </section>
 
-<section>
+<section id="meusArtigos">
     <h2>Meus artigos</h2>
 </section>
 
-<section>
-    <p>informações uteis</p>
-    <li><a href="https://github.com/joaomarcos33">meu github</a> </li>
-    <li>telefone: 11966208890</li>
-    <li>Email-jm.marinhobaron@gmail.com</li>
-    
+<section id="contato">
+<form>
+    <input type="text" name="nome">
+    <input type="range" name="email">
+    <textarea name="mensagem" rows="5" cols="50"></textarea>
+    <input type="submit" name="botaoEnviar">
+</form>
+</section>
     <p>Copyright</p>
 </section>
 </body>
 </html>
 
 
+<!--p>informações uteis</p>
+    <li><a href="https://github.com/joaomarcos33">meu github</a> </li>
+    <li>telefone: 11966208890</li>
+    <li>Email-jm.marinhobaron@gmail.com</li>
